--- a/HACK-7.2-CodeFest25-sb.html
+++ b/HACK-7.2-CodeFest25-sb.html
@@ -561,37 +561,47 @@
     </div>
   </section>
 
-  <!-- Prizes -->
-  <section class="section wrap">
-    <div class="card">
-      <h2><strong>Prizes &amp; Awards</strong></h2>
-      <p class="meta">Prizes or awards for 1st Place Winners — Each Track</p>
-      <ul style="margin-left:18px;margin-top:4px">
-        <li>Each track will have a <strong>1st Place Winner</strong> announced after the live closing ceremony.</li>
-        <li>Visit the <strong>Devpost submission portal</strong> to view the <strong>"Prizes"</strong> card located on the top-right section of the page.</li>
-        <br>
-        <li>The prize list and descriptions are subject to change based on:
-          <ul style="margin-top:4px;margin-left:18px;list-style-type:circle">
-            <li>Partner sponsorships and contributions</li>
-            <li>Available funding and event resources</li>
-          </ul>
-        </li>
-        <br>
-        <li>Check the Devpost page regularly for updates leading up to the event start.</li>
-        <li>The <strong>Project Gallery</strong> tab on Devpost will display all submitted projects once the gallery opens before the live demos at the closing ceremony.</li>
-        <li>If your project does not appear in the Project Gallery, you may have missed a required step on Devpost.</li>
-        <br>
-        <li>It is your responsibility to ensure that:
-          <ul style="margin-top:4px;margin-left:18px;list-style-type:circle">
-            <li>All required Devpost information fields are completed.</li>
-            <li>Your project is submitted correctly and marked as “Published.”</li>
-          </ul>
-        </li>
-        <li>If any issue arises, please reach out to the event organizers via <strong>LinkedIn</strong> ahead of time for assistance.</li>
-      </ul>
-      <p class="meta">Devpost serves as the official source of truth for all prize announcements and project listings.</p>
+<section class="section wrap">
+  <!-- Prizes Card -->
+  <div class="card">
+    <h2><strong>Prizes &amp; Awards</strong></h2>
+    <p class="meta">Prizes or awards for 1st Place Winners — Each Track</p>
+    <ul style="margin-left:18px;margin-top:4px">
+      <li>Each track will have a <strong>1st Place Winner</strong> announced after the live closing ceremony.</li>
+      <li>Visit the <strong>Devpost submission portal</strong> to view the <strong>"Prizes"</strong> card located on the top-right section of the page.</li>
+      <br>
+      <li>The prize list and descriptions are subject to change based on:
+        <ul style="margin-top:4px;margin-left:18px;list-style-type:circle">
+          <li>Partner sponsorships and contributions</li>
+          <li>Available funding and event resources</li>
+        </ul>
+      </li>
+      <br>
+      <li>Check the Devpost page regularly for updates leading up to the event start.</li>
+      <li>The <strong>Project Gallery</strong> tab on Devpost will display all submitted projects once the gallery opens before the live demos at the closing ceremony.</li>
+      <li>If your project does not appear in the Project Gallery, you may have missed a required step on Devpost.</li>
+      <br>
+      <li>It is your responsibility to ensure that:
+        <ul style="margin-top:4px;margin-left:18px;list-style-type:circle">
+          <li>All required Devpost information fields are completed.</li>
+          <li>Your project is submitted correctly and marked as “Published.”</li>
+        </ul>
+      </li>
+      <li>If any issue arises, please reach out to the event organizers via <strong>LinkedIn</strong> ahead of time for assistance.</li>
+    </ul>
+    <p class="meta">
+      Devpost serves as the official source of truth for all prize announcements and project listings.
+    </p>
+
+    <!-- Highlighted button for prizes + perks -->
+    <div class="row" style="margin-top:10px">
+      <a class="btn" href="#" data-url="perks" target="_blank" rel="noopener">
+        View Prizes &amp; Perks Overview
+      </a>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Judges / Mentors / Speakers -->
   <section class="section wrap">
