--- a/hackuniversity-onestopformcopy.html
+++ b/hackuniversity-onestopformcopy.html
@@ -1071,11 +1071,11 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; font-family: "Tim
     </div>
     <div class="footer-section">
       <div style="flex:1;"></div>
-      <div class="signature-area">
-        <div class="sig-line"></div>
-        <div class="sig-name">BRIAN BAZURTO</div>
-        <div class="sig-title">President of ${escapeHtml(c.signatureClubText || "Hack University Initiative")}</div>
-      </div>
+      // <div class="signature-area">
+      //   <div class="sig-line"></div>
+      //   <div class="sig-name">BRIAN BAZURTO</div>
+      //   <div class="sig-title">President of ${escapeHtml(c.signatureClubText || "Hack University Initiative")}</div>
+      // </div>
       <div style="flex:1;"></div>
     </div>
   </div>
