--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -201,7 +201,7 @@
     <p class="text-xs sm:text-sm text-gray-500 mb-2">
       <a href="https://hackuniversity.vercel.app" class="underline hover:no-underline">Hack University</a>
       <span aria-hidden="true"> / </span>
-      Member Login, Hackathon Updates &amp; Certificates
+      Member Login, Hackathon Registration/Updates &amp; Member Certificates
     </p>
 
     <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
@@ -220,7 +220,7 @@
     <!-- Helper text for this page -->
     <p class="mt-3 text-gray-600 max-w-2xl">
       Use the same Gmail/Google account you used on the OneStopForm to verify your membership,
-      update hackathon registration, unlock Discord &amp; GroupMe, and download your official membership certificate.
+      register or update hackathon registration, unlock Discord &amp; GroupMe, and download your official membership certificate.
     </p>
 
     <!-- New User CTA (register) -->
@@ -429,128 +429,78 @@
             </a>
           </div>
 
-          <!-- Organization-Specific Communities -->
-          <div class="bg-white rounded-lg p-6 border border-green-200 mb-6">
-            <h4 class="text-xl font-bold text-gray-800 mb-4 text-center">
-              🌐 Join Organization-Specific Communities
-            </h4>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-3">
-              <!-- Code Crunch Worldwide -->
-              <div class="text-center">
-                <h5 class="font-semibold text-gray-700 mb-2 text-sm">Code Crunch Worldwide</h5>
-                <div class="flex gap-2 justify-center">
-                  <a
-                    href="https://codecrunchglobal-discordserver.vercel.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="bg-purple-600 hover:bg-purple-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
-                  >
-                    <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
-                  </a>
-                  <a
-                    href="https://hackuniversitygroupme.vercel.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
-                  >
-                    <i class="fas fa-users text-sm" aria-hidden="true"></i>GroupMe
-                  </a>
-                </div>
-              </div>
+         <div class="bg-white rounded-lg p-6 border border-green-200 mb-6">
+  <h4 class="text-xl font-bold text-gray-800 mb-4 text-center">
+    🌐 Join Organization-Specific Communities
+  </h4>
 
-              <!-- ColorStack at FIU -->
-              <div class="text-center">
-                <h5 class="font-semibold text-gray-700 mb-2 text-sm">ColorStack at FIU</h5>
-                <div class="flex gap-2 justify-center">
-                  <a
-                    href="https://colorstackatfiu-discordserver.vercel.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="bg-purple-600 hover:bg-purple-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
-                  >
-                    <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
-                  </a>
-                  <a
-                    href="https://hackuniversitygroupme.vercel.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
-                  >
-                    <i class="fas fa-users text-sm" aria-hidden="true"></i>GroupMe
-                  </a>
-                </div>
-              </div>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
 
-              <!-- CAHSI at FIU -->
-              <div class="text-center">
-                <h5 class="font-semibold text-gray-700 mb-2 text-sm">CAHSI at FIU</h5>
-                <div class="flex gap-2 justify-center">
-                  <a
-                    href="https://cahsiatfiu-discordserver.vercel.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="bg-purple-600 hover:bg-teal-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
-                  >
-                    <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
-                  </a>
-                  <a
-                    href="https://hackuniversitygroupme.vercel.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="bg-blue-500 hover:bg-cyan-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
-                  >
-                    <i class="fas fa-users text-sm" aria-hidden="true"></i>GroupMe
-                  </a>
-                </div>
-              </div>
 
-              <!-- GDG at FIU -->
-              <div class="text-center">
-                <h5 class="font-semibold text-gray-700 mb-2 text-sm">GDG at FIU</h5>
-                <div class="flex gap-2 justify-center">
-                  <a
-                    href="https://gdgatfiu-discordserver.vercel.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="bg-purple-600 hover:bg-red-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
-                  >
-                    <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
-                  </a>
-                  <a
-                    href="https://hackuniversitygroupme.vercel.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="bg-blue-500 hover:bg-green-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
-                  >
-                    <i class="fas fa-users text-sm" aria-hidden="true"></i>GroupMe
-                  </a>
-                </div>
-              </div>
 
-              <!-- Raspberry Pi Code Crunch -->
-              <div class="text-center col-span-1 sm:col-span-2 lg:col-span-4">
-                <h5 class="font-semibold text-gray-700 mb-2 text-sm">Raspberry Pi Code Crunch</h5>
-                <div class="flex gap-2 justify-center">
-                  <a
-                    href="https://codecrunchglobal-discordserver.vercel.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="bg-purple-600 hover:bg-pink-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
-                  >
-                    <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
-                  </a>
-                  <a
-                    href="https://hackuniversitygroupme.vercel.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="bg-blue-500 hover:bg-rose-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
-                  >
-                    <i class="fas fa-users text-sm" aria-hidden="true"></i>GroupMe
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
+    <!-- Code Crunch Global -->
+    <div class="text-center">
+      <h5 class="font-semibold text-gray-700 mb-2 text-sm">Code Crunch Global</h5>
+      <div class="flex justify-center">
+        <a href="https://codecrunchglobal-discordserver.vercel.app/"
+           target="_blank"
+           class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-md font-medium text-sm flex items-center gap-1">
+          <i class="fab fa-discord"></i> Discord
+        </a>
+      </div>
+    </div>
+
+    <!-- ColorStack at FIU -->
+    <div class="text-center">
+      <h5 class="font-semibold text-gray-700 mb-2 text-sm">ColorStack at FIU</h5>
+      <div class="flex justify-center">
+        <a href="https://colorstackatfiu-discordserver.vercel.app/"
+           target="_blank"
+           class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-md font-medium text-sm flex items-center gap-1">
+          <i class="fab fa-discord"></i> Discord
+        </a>
+      </div>
+    </div>
+
+    <!-- CAHSI at FIU -->
+    <div class="text-center">
+      <h5 class="font-semibold text-gray-700 mb-2 text-sm">CAHSI at FIU</h5>
+      <div class="flex justify-center">
+        <a href="https://cahsiatfiu-discordserver.vercel.app/"
+           target="_blank"
+           class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-md font-medium text-sm flex items-center gap-1">
+          <i class="fab fa-discord"></i> Discord
+        </a>
+      </div>
+    </div>
+
+    <!-- GDG at FIU -->
+    <div class="text-center">
+      <h5 class="font-semibold text-gray-700 mb-2 text-sm">Google Developer Group (GDG) at FIU</h5>
+      <div class="flex justify-center">
+        <a href="https://gdgatfiu-discordserver.vercel.app/"
+           target="_blank"
+           class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-md font-medium text-sm flex items-center gap-1">
+          <i class="fab fa-discord"></i> Discord
+        </a>
+      </div>
+    </div>
+
+    <!-- Raspberry Pi Code Crunch -->
+    <div class="text-center">
+      <h5 class="font-semibold text-gray-700 mb-2 text-sm">Raspberry Pi Code Crunch</h5>
+      <div class="flex justify-center">
+        <a href="https://raspberrypicodecrunchdiscord.vercel.app/"
+           target="_blank"
+           class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-md font-medium text-sm flex items-center gap-1">
+          <i class="fab fa-discord"></i> Discord
+        </a>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 
           <!-- User's Club Memberships Display -->
           <div id="user-club-memberships" class="bg-blue-50 rounded-lg p-6 border border-blue-200">
@@ -800,7 +750,7 @@
 <!-- JS: Membership Lookup & Certificate -->
 <script>
 const API_URL =
-  "https://script.google.com/macros/s/AKfycbwKujBRsNpb14Wt5fvjKxLONMAqB-W53fpFrRdzwcZZAFA65EEak6W862qALPhLH3BHGg/exec";
+  "https://script.google.com/macros/s/AKfycby8iezXn8j3OwDOCJPZ2gSQ_ccD8gtt60-AlfFDKOynG8vvNcWxtROiDL6OQHl5hmKk-w/exec";
 
 let certificateData = null;
 
@@ -820,74 +770,43 @@ function hideStatus() {
   el.textContent = "";
 }
 
-/* ------------ Clubs Renderer ------------ */
 function displayUserClubMemberships(clubs) {
   const clubsGrid = document.getElementById("user-clubs-grid");
   if (!clubsGrid) return;
 
-  if (!Array.isArray(clubs) || clubs.length === 0) {
-    clubsGrid.innerHTML =
-      '<div class="col-span-full text-center text-blue-600 italic">No specific club memberships found in our records.</div>';
-    return;
-  }
-
   clubsGrid.innerHTML = "";
 
+  const logoMap = {
+    "Hack University": "https://github.com/user-attachments/assets/223a12cb-c5ea-4009-a442-2ad144c8e1d6",
+    "Code Crunch Global": "https://github.com/user-attachments/assets/5e2a6622-9702-438f-bb6b-25d8e894839e",
+    "ColorStack at FIU": "https://github.com/user-attachments/assets/c9298abf-c85b-4ff8-8b92-e7f38ddcc846",
+    "CAHSI at FIU": "https://github.com/user-attachments/assets/c4f4805e-db3b-47a2-9a7f-0b124a66dd85",
+    "Google Developer Group at FIU": "https://github.com/user-attachments/assets/f62d5d75-d45f-4c01-b444-1c99a4031e27",
+    "Raspberry Pi Code Crunch": "https://github.com/user-attachments/assets/1eaf8425-7b4b-4035-a84b-b9b0ed28c52c",
+  };
+
   clubs.forEach((club) => {
+    const name = club.name || "Club";
+    const logo = logoMap[name] || logoMap["Hack University"];
+
     const card = document.createElement("div");
-    card.className =
-      "bg-white rounded-lg p-4 border border-blue-200 text-center hover:shadow-md transition-shadow";
+    card.className = "bg-white rounded-lg p-4 border border-blue-200 text-center hover:shadow-md transition-shadow";
 
-    const wrapper = document.createElement("div");
-    wrapper.className = "mb-3";
+    card.innerHTML = `
+      <img src="${logo}" alt="${name} Logo"
+           class="w-12 h-12 mx-auto rounded-lg object-contain mb-2"/>
 
-    if (club.logo) {
-      const img = document.createElement("img");
-      img.src = club.logo;
-      img.alt = (club.name || "Club") + " Logo";
-      img.className = "w-12 h-12 mx-auto rounded-lg object-contain mb-2";
-      img.onerror = function () {
-        this.style.display = "none";
-        fallback.style.display = "flex";
-      };
+      <div class="font-semibold text-gray-800 text-sm mb-1">${name}</div>
 
-      const fallback = document.createElement("div");
-      fallback.style.display = "none";
-      fallback.className =
-        "w-12 h-12 mx-auto rounded-lg bg-blue-500 text-white font-bold text-xs flex items-center justify-center leading-tight";
-      fallback.textContent = club.textFallback || club.name || "Club";
+      ${club.description ? `<div class="text-xs text-gray-600 mb-2">${club.description}</div>` : ""}
 
-      wrapper.appendChild(img);
-      wrapper.appendChild(fallback);
-    } else {
-      const fallback = document.createElement("div");
-      fallback.className =
-        "w-12 h-12 mx-auto rounded-lg bg-blue-500 text-white font-bold text-xs flex items-center justify-center leading-tight";
-      fallback.textContent = club.textFallback || club.name || "Club";
-      wrapper.appendChild(fallback);
-    }
+      <div class="text-xs font-medium text-green-600">✅ Active Member</div>
+    `;
 
-    const name = document.createElement("div");
-    name.className = "font-semibold text-gray-800 text-sm mb-1";
-    name.textContent = club.name || "Club";
-
-    const desc = document.createElement("div");
-    if (club.description) {
-      desc.className = "text-xs text-gray-600 mb-2";
-      desc.textContent = club.description;
-    }
-
-    const badge = document.createElement("div");
-    badge.className = "text-xs font-medium text-green-600";
-    badge.textContent = "✅ Active Member";
-
-    card.appendChild(wrapper);
-    card.appendChild(name);
-    if (club.description) card.appendChild(desc);
-    card.appendChild(badge);
     clubsGrid.appendChild(card);
   });
 }
+
 
 /* ------------ Membership Verification ------------ */
 async function generateCertificate(evt) {
